// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriteriaView should render 1`] = `
<div>
  <div
    class="criteria-view-root pt-2"
  >
    <div
      class="criteria-group"
    >
      <div
        class="criteria-row"
      >
        Individual
        <b>
          firstName
        </b>
        <span>
          is
        </span>
        <b>
          "test"
        </b>
      </div>
    </div>
  </div>
</div>
`;

exports[`CriteriaView should render with multiple values 1`] = `
<div>
  <div
    class="criteria-view-root pt-2"
  >
    <div
      class="criteria-group"
    >
      <div
        class="criteria-row"
      >
        Individual
        <b>
          firstName
        </b>
        <span>
          is
        </span>
        <b>
          "["A", "B"]"
        </b>
      </div>
      <div
        class="conjunction"
      >
        And
      </div>
      <div
        class="criteria-row"
      >
        Individual
        <b>
          firstName
        </b>
        <span>
          is
        </span>
        <b>
          "["A", "B"]"
        </b>
      </div>
    </div>
  </div>
</div>
`;

exports[`CriteriaView should render with nested criterias 1`] = `
<div>
  <div
    class="criteria-view-root pt-2"
  >
    <div
      class="criteria-group"
    >
      <div
        class="criteria-group"
      >
        <div
          class="criteria-group"
        >
          <div
            class="criteria-group"
          >
            <div
              class="criteria-row"
            >
              <b
                class="undefined-property"
              >
                Attribute no longer exists.
              </b>
            </div>
            <div
              class="conjunction"
            >
              Or
            </div>
            <div
              class="criteria-row"
            >
              <b
                class="undefined-property"
              >
                Attribute no longer exists.
              </b>
            </div>
          </div>
          <div
            class="conjunction"
          >
            And
          </div>
          <div
            class="criteria-row"
          >
            <b
              class="undefined-property"
            >
              Attribute no longer exists.
            </b>
          </div>
        </div>
        <div
          class="conjunction"
        >
          Or
        </div>
        <div
          class="criteria-row"
        >
          <b
            class="undefined-property"
          >
            Attribute no longer exists.
          </b>
        </div>
      </div>
      <div
        class="conjunction"
      >
        And
      </div>
      <div
        class="criteria-row"
      >
        <b
          class="undefined-property"
        >
          Attribute no longer exists.
        </b>
      </div>
    </div>
  </div>
</div>
`;
